ros_ws/log/build_2025-01-23_08-14-16/dogzilla_joints/stdout_stderr.log
running egg_info
writing ../../build/dogzilla_joints/dogzilla_joints.egg-info/PKG-INFO
writing dependency_links to ../../build/dogzilla_joints/dogzilla_joints.egg-info/dependency_links.txt
writing entry points to ../../build/dogzilla_joints/dogzilla_joints.egg-info/entry_points.txt
writing requirements to ../../build/dogzilla_joints/dogzilla_joints.egg-info/requires.txt
writing top-level names to ../../build/dogzilla_joints/dogzilla_joints.egg-info/top_level.txt
reading manifest file '../../build/dogzilla_joints/dogzilla_joints.egg-info/SOURCES.txt'
writing manifest file '../../build/dogzilla_joints/dogzilla_joints.egg-info/SOURCES.txt'
running build
running build_py
copying dogzilla_joints/joints_pub.py -> /home/yahboom/Desktop/dogzillaS2/ros_ws/build/dogzilla_joints/build/lib/dogzilla_joints
running install
running install_lib
copying /home/yahboom/Desktop/dogzillaS2/ros_ws/build/dogzilla_joints/build/lib/dogzilla_joints/joints_pub.py -> /home/yahboom/Desktop/dogzillaS2/ros_ws/install/dogzilla_joints/lib/python3.10/site-packages/dogzilla_joints
byte-compiling /home/yahboom/Desktop/dogzillaS2/ros_ws/install/dogzilla_joints/lib/python3.10/site-packages/dogzilla_joints/joints_pub.py to joints_pub.cpython-310.pyc
  File "/home/yahboom/Desktop/dogzillaS2/ros_ws/install/dogzilla_joints/lib/python3.10/site-packages/dogzilla_joints/joints_pub.py", line 28
    			self.get_logger().warn(response.message
    			                      ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/home/yahboom/Desktop/dogzillaS2/ros_ws/install/dogzilla_joints/lib/python3.10/site-packages/dogzilla_joints-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/dogzilla_joints/dogzilla_joints.egg-info to /home/yahboom/Desktop/dogzillaS2/ros_ws/install/dogzilla_joints/lib/python3.10/site-packages/dogzilla_joints-0.0.0-py3.10.egg-info
running install_scripts
Installing joints_pub script to /home/yahboom/Desktop/dogzillaS2/ros_ws/install/dogzilla_joints/lib/dogzilla_joints
Installing joints_sub script to /home/yahboom/Desktop/dogzillaS2/ros_ws/install/dogzilla_joints/lib/dogzilla_joints
writing list of installed files to '/home/yahboom/Desktop/dogzillaS2/ros_ws/build/dogzilla_joints/install.log'
